--- a/lighthouse-viewer/app/styles/viewer.css
+++ b/lighthouse-viewer/app/styles/viewer.css
@@ -60,6 +60,9 @@
   cursor: pointer;
   background-color: #fff;
 }
+.viewer-placeholder-inner.lh-loading {
+  filter: blur(2px);
+}
 .viewer-placeholder-inner.dropping {
   border-color: currentColor;
 }
@@ -123,8 +126,4 @@
 /* open-in-gist option visible in Viewer */
 .lh-tools__dropdown .lh-tools--gist {
   display: block !important;
-}
-
-.lh-loading {
-  filter: blur(2px);
 }
